tests/errors/type10.ramen
FROM (YIELD "glop" AS x EVERY 5s) SELECT AVG x;
